[tool.poetry]
name = "justdial-cwa-doctors"
version = "0.1.0"
description = ""
authors = ["Akul Mathur <akulmat@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cython=">=3.0.0"
# for fast loop and table processing
pyarrow= ">=14.0.0"
pandas = {version=">=2.1.2", extras=["performance", "excel", "feather", "parquet", "output-formatting","computation","consortium-standard"]}
scraperwiki = { git = "git@github.com:openaustralia/scraperwiki-python.git", branch="morph_defaults" }
lxml = { git = "git@github.com:lxml/lxml.git", branch = "master"}
cssselect = "^1.2.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
isort = ">=5.12.0"
black = ">=23.7.0"
mypy = ">=1.4.1"
pandas-stubs = "^2.0.2.230605"

[tool.isort]
line_length = 79
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = [
    "poetry-core",
    "Cython",
]
build-backend = "poetry.core.masonry.api"
